# python-awaiter-for-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
example/: example.py  main.cpp
include/pyawaiter/: async_invoker.h  manager.h  utils.h
python/: manager.py
src/: manager.cpp  utils.cpp
